# MRSIPrep

./: .gitignore  CITATION.cff  Dockerfile  Dockerfile.bootstrap  Dockerfile.deps  PUBLIC_DATASET.md  README.md  pyproject.toml
.github/workflows/: coverage.yml  e2e-mni-norm.yml  e2e-parc-con.yml  e2e-synthmrsi-project.yml
docker/: DOCKERHUB.md  README.md  check_neurodeps.sh  entrypoint.sh  finalize_manual_deps.sh  prune_cpu_neurodeps.sh  test_container.sh  update_mrsiprep_image.sh
docs/: benchmarks.md  changelog.md  conf.py  index.md  installation.md  requirements.txt  usage_basic.md  usage_longitudinal.md  usage_normalization.md  usage_parcellation.md
examples/: run_synthmrsi_project_docker.sh
mrsiprep/cli/: parser.py  run.py
mrsiprep/config/: defaults.py  settings.py
mrsiprep/config/presets/: imaging-neurosci-2026.json  nature-comms-2025.json
mrsiprep/interfaces/: ants.py  freesurfer.py  fsl.py
mrsiprep/io/: bids.py  mrsinmrs.py  naming.py  validators.py
mrsiprep/mrsi/: filtering.py  pvc.py  resampling.py
mrsiprep/parcellation/: atlas_registry.py  chimera_native.py  metprofiles.py  mni_atlas.py  synthseg.py  tissue_regression.py
mrsiprep/registration/: mrsi_to_t1.py  subject_template.py  t1_to_mni.py  transforms.py
mrsiprep/reports/: connectivity_overview.py  html.py  mrsi_preproc.py  parcel_figures.py  parcel_qc.py  parcellation_overview.py  registration_overview.py  tissue.py
mrsiprep/tissue/: fractions.py  fuzzy_cmeans.py  psf.py  synthseg_fast.py
mrsiprep/utils/: debug.py  images.py  logging.py  misc.py  provenance.py
mrsiprep/workflows/: anatomical.py  mrsi.py  participant.py  registration.py  tissue.py
mrsiprep/workflows/nipype_engine/: adapters.py  build.py  nodes.py  run.py
tests/: test_bids_inputs.py  test_cli.py  test_connectivity.py  test_derivative_names.py  test_fsl_fnirt.py  test_mrsinmrs.py  test_nipype_engine.py  test_processing_modes.py  test_qc_reports.py  test_synthmrsi_project_e2e.py
wrapper/: README.md  pyproject.toml
wrapper/src/mrsiprep_docker/: __init__.py  __main__.py
